List of TODOS 

tODO# 	Status  Priority	Summary
----------------------------------------------------------------------------
1 	Done        2    	Add get_dataframe parameter values to configurationFile.py
2 	Done     	2       break up try statement in polygon_data.py
3 	Done       	2       make these errors on a case by case bases in polygon_data.py
4 	Archive	    3    	make get_indicators script format not function in polygon_data.py
5 	Done 	    4    	Try to clean time stuff up in generate_csv.py
6 	------ 		5       Change get_indicators return to index the list in generate_csv.py
7 	Done		1       In get_dataframe Fix time delta for one day interval -> timedelta(300) in polygon_data.py
8   ------      2       Work on script to editing changeLog.txt in todoLog.pl
9   Done        5       DFPARAM can be deleted in configurationFile.py
10  ------      5       Clean up PARAMSET in configurationFile.py
11  Working     1       Work to auto fill Trading Post Excel (not platform) in fillTP.py 